compiler-core/src/error/snapshots/gleam_core__error__tests__io_link_file_error_not_windows.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to link this file:

    /src

To:

    /dest

The error message from the file IO library was:

    Critical error!
