compiler-core/src/error/snapshots/gleam_core__error__tests__io_metadata_cache_error.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to parse this file:

    wibble/wobble.cache_meta

The data in this file was not in the expected format, so it could
not be understood by the compiler.

This can happen if the data file was created with a different
version of Gleam, or if the files have been corrupted in some way.
