compiler-core/src/error/snapshots/gleam_core__error__tests__io_parse_file_not_found_error.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to parse this file:

    /file

This file does not exist.
