compiler-core/src/error/snapshots/gleam_core__error__tests__io_update_file_permissions_error.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to update permissions of this file:

    /file

The error message from the file IO library was:

    Critical error!
